applications/miniapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniapp
spec:
  selector:
    app: miniapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
