applications/miniapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - miniapp-stage.steady.ops.last-try.org
    secretName: miniapp-tls
  rules:
  - host: miniapp-stage.steady.ops.last-try.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miniapp
            port:
              number: 80
